data/derived/comb/progs/unify/prog0526.ml.out
Characters 132-147:
  else additivePersAndRoot((digits theSum) (pers + 1));;
                           ^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
